--- a/index.html
+++ b/index.html
@@ -9,12 +9,39 @@
 </head>
 <body>
     <header class="container header text-center">
-        <div class="row">
-            <div class="logo col-3">
+        <div class="row align-items-center">
+            <div class="logo col">
                 <img src="img/logo.png" alt="">
             </div>
-            <div class="menu"></div>
-            <div class="shield"></div>
+            <nav class="navbar navbar-expand-lg col">
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav nav-fill w-100">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Главная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Меню</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Афиша</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Сотрудничество</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Галерея</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Новости</a>
+                        </li>
+                    </ul>
+                </div>
+                </nav>
+            <div class="shield col">
+                <a class="shield-btn">
+                    Бронирование
+                </a>
+            </div>
         </div>
     </header>
     <div class="content"></div>
