--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>BeerShop</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
       crossorigin="anonymous"
     />
+
+    <script src="js/script.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -21,7 +23,7 @@
         <nav class="navbar navbar-expand-lg col">
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav nav-fill w-100">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="#">Главная</a>
               </li>
               <li class="nav-item">
@@ -43,11 +45,43 @@
           </div>
         </nav>
         <div class="shield col">
-          <a class="shield-btn"> Бронирование </a>
+          <a class="shield-btn btn-hover"> Бронирование </a>
         </div>
       </div>
     </header>
-    <div class="content"></div>
-    <footer class="footer"></footer>
+
+    <content class="kitchen">
+      <div class="container">
+        <div class="row">
+          <h2 class="text-center text-uppercase mb-5">Кухня</h2>
+        </div>
+        <div class="row kitchen__menu">
+          <!--                 
+                <div class="col-md-6 col-sm-12 kitchen__menu_item">
+                    <img src="img/kitchen_img.png" alt="menu_item">
+                    <div class="kitchen__menu_item__annotation">
+                        <div class="kitchen__menu_item__header mb-2">
+                            <h4 class="text-uppercase text-white">Amet donec. </h3>
+                            <span><a href="" class="btn-hover">550р</a></span>
+                        </div>
+                        <p>550 гр</p>
+                        <p class="kitchen__menu_item__about text-white">Placerat id auctor nunc id vel vel curabitur. Urna fames maecenas leo elit diam nibh elit.</p>
+                    </div>
+                </div> -->
+        </div>
+      </div>
+    </content>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="line"></div>
+          <div class="footer__info">
+            <p>Copyright © 2022. Все права защищены.</p>
+            <p>Разработано d-e-n.ru</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
