--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             </ul>
           </div>
         </nav>
-        <div class="shield col">
-          <a class="shield-btn btn-hover"> Бронирование </a>
+        <div class="shield col random__beer">
+          <a class="shield-btn btn-hover"> Случайное пиво </a>
         </div>
       </div>
     </header>
@@ -53,7 +53,7 @@
     <content class="kitchen">
       <div class="container">
         <div class="row">
-          <h2 class="text-center text-uppercase mb-5">Кухня</h2>
+          <h2 class="text-center text-uppercase mb-5">Меню</h2>
         </div>
         <div class="row kitchen__menu">
           <!--                 
