added single beer page

--- a/singleBeer.html
+++ b/singleBeer.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
 
-    <script src="js/script.js" defer></script>
+    <script src="js/script2.js" defer></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-lg col">
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav nav-fill w-100">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Главная</a>
               </li>
               <li class="nav-item">
@@ -40,35 +40,26 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Новости</a>
-              </li>
+              </li> -->
             </ul>
           </div>
         </nav>
-        <div class="shield col random__beer">
+        <!-- <div class="shield col random__beer">
           <a class="shield-btn btn-hover"> Случайное пиво </a>
-        </div>
+        </div> -->
       </div>
     </header>
 
     <content class="kitchen">
       <div class="container">
-        <div class="row">
-          <h2 class="text-center text-uppercase mb-5">Меню</h2>
-        </div>
-        <div class="row kitchen__menu">
-          <!--                 
-                <div class="col-md-6 col-sm-12 kitchen__menu_item">
-                    <img src="img/kitchen_img.png" alt="menu_item">
-                    <div class="kitchen__menu_item__annotation">
-                        <div class="kitchen__menu_item__header mb-2">
-                            <h4 class="text-uppercase text-white">Amet donec. </h3>
-                            <span><a href="" class="btn-hover">550р</a></span>
-                        </div>
-                        <p>550 гр</p>
-                        <p class="kitchen__menu_item__about text-white">Placerat id auctor nunc id vel vel curabitur. Urna fames maecenas leo elit diam nibh elit.</p>
-                    </div>
-                </div> -->
-        </div>
+        <div class="row single__beer_details text-center">
+            <div class="row beer__name justify-content-center">
+                
+            </div>
+            <div class="row beer__details justify-content-center">
+                
+            </div>
+            </div>
       </div>
     </content>
 
