added single beer page

--- a/singleBeer.html
+++ b/singleBeer.html
@@ -44,9 +44,9 @@
             </ul>
           </div>
         </nav>
-        <!-- <div class="shield col random__beer">
-          <a class="shield-btn btn-hover"> Случайное пиво </a>
-        </div> -->
+        <div class="shield col main_page_redirect_btn">
+          <a class="shield-btn btn-hover"> Главная страница </a>
+        </div>
       </div>
     </header>
 
