--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="logo col">
           <img src="img/logo.png" alt="" />
         </div>
-        <nav class="navbar navbar-expand-lg col">
+        <!-- <nav class="navbar navbar-expand-lg col">
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav nav-fill w-100">
               <li class="nav-item">
@@ -43,7 +43,7 @@
               </li>
             </ul>
           </div>
-        </nav>
+        </nav> -->
         <div class="shield col random__beer">
           <a class="shield-btn btn-hover"> Случайное пиво </a>
         </div>
