--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
                     </div>
                 </div> -->
         </div>
+        <div class="row text-center pagination_buttons">
+          <div class="col btn-prev shield-btn">Назад</div>
+          <div class="col pagination__numbers shield-btn"></div>
+          <div class="col btn-next shield-btn">Вперед</div>
+        </div>
       </div>
     </content>
 
