added dropdown list with amount of beer per page

--- a/index.html
+++ b/index.html
@@ -71,8 +71,18 @@
         </div>
         <div class="row text-center pagination_buttons">
           <div class="col btn-prev shield-btn">Назад</div>
-          <div class="col pagination__numbers shield-btn"></div>
+          <div class="col pagination__numbers shield-btn">
+          </div>
           <div class="col btn-next shield-btn">Вперед</div>
+          <div class="per_page_container">
+            <label for="per_page"> Пива на страницу: </label>
+              <select name="per_page" id="per_page">
+                <option value="5">5</option>
+                <option value="10">10</option>
+                <option value="20">20</option>
+                <option value="40">40</option>
+              </select>
+          </div>
         </div>
       </div>
     </content>
@@ -82,7 +92,7 @@
         <div class="row">
           <div class="line"></div>
           <div class="footer__info">
-            <p>Copyright © 2022. Все права защищены.</p>
+            <p>Copyright © 2023. Все права защищены.</p>
             <p>Разработано full_send</p>
           </div>
         </div>
